2015-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: One line by worker.

2015-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/tapefile.c (list_retention, list_no_retention): Do not
	  list datestamp==0 or not in a listed storage.

2015-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c, perl/Amanda/Policy.pm,
	  perl/Amanda/Taper/Scan.pm,
	  server-src/tapefile.c: retention_tapes default to tapecycle-1.
	* man/xml-source/amanda.conf.5.xml: Document it.
	* installcheck/Amanda_Taper_Scan.pl,
	  installcheck/Amanda_Taper_Scan_lexical.pl,
	  installcheck/Amanda_Taper_Scan_oldest.pl,
	  installcheck/Amanda_Taper_Scan_traditional.pl: Fix.

2015-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/tapefile.c (list_retention, list_no_retention): Fix.

2015-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Config.pl: Fix: Remove append keyword.

2015-03-04  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix parsing dump-selection (remove append).
	* man/xml-source/amanda.conf.5.xml: Document change.

2015-02-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (config_print_errors_as_message): Fix message.

2015-02-18  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amadmin.8.xml: Document tape --days.
	* server-src/amadmin.c: Fix --days intape command.

2015-02-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsdtcp-security.c, common-src/krb5-security.c,
	* common-src/local-security.c, common-src/rsh-security.c,
	* common-src/ssh-security.c: Fix bug found by coverity.

2015-02-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: Fix crash in tape command.

2015-02-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Xfer.swg: Fix for swig-3.0.5

2015-02-13  Jean-Louis Martineau <martineau@zmanda.com>